log/build_2023-10-23_11-36-45/mob_rob_loca/stderr.log
  File "/home/coderey/ros2_ws/install/mob_rob_loca/lib/python3.8/site-packages/mob_rob_loca/tick_to_odom.py", line 155
    avgAngle = cycleAngle * 0.5 + self.odomOld.pose.pose.orientation.z
    ^
SyntaxError: invalid syntax

